Add new sliding window algorithm implementations: lengthOfLongestSubstring and findAnagrams